# Projeto-Gangorra

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
docs/: Documentação do Software embarcado cb58845ba6ef4e04be6b9cc53eff0f24.md
docs/Documentação do Software embarcado cb58845ba6ef4e04be6b9cc53eff0f24/: Wiki - Firmware dc74ac75875b44fe8230f22a48d59821.md
docs/components/: components.puml
docs/containers/: containers.puml
docs/contexto/: contexto.puml
main/: CMakeLists.txt
main/components/bluetooth_low_energy/: bluetooth_low_energy.cpp  bluetooth_low_energy.hpp
main/components/delay/: delay.cpp  delay.h  delay.hpp
main/components/i2c/: i2c.cpp  i2c.hpp
main/components/lcd/: lcd.cpp  lcd.h  lcd.hpp
main/components/mpu6050/: mpu6050.cpp  mpu6050.hpp
main/components/ultrasonic/: ultrasonic.cpp  ultrasonic.hpp
main/inc/: bluetooth.hpp  display.hpp  motors.hpp  sensors.hpp  system.hpp
main/src/: bluetooth.cpp  display.cpp  main.cpp  motors.cpp  sensors.cpp  system.cpp
